Доделал ТЗ